--- a/DotNetCoreAPI/DotNetCoreAPI/DotNetCoreAPI.csproj
+++ b/DotNetCoreAPI/DotNetCoreAPI/DotNetCoreAPI.csproj
@@ -8,5 +8,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+  </ItemGroup>
+
 
 </Project>
